--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero"><h1><span>S</span>haif <span>A</span>rfan</h1></a>
+          <a href="#hero"><h1><span>J</span>osé <span>U</span>lombe</h1></a>
         </div>
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
@@ -36,7 +36,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
-        <h1>Arfan <span></span></h1>
+        <h1>José <span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
     </div>
